Add first own TUI menu that supports manual input via w, s and Enter.

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,14 @@
       <version>${assertj-core.version}</version>
       <scope>test</scope>
     </dependency>
+<!--Add dependency for Clikt Library-->
+    <dependency>
+      <groupId>com.github.ajalt.clikt</groupId>
+      <artifactId>clikt</artifactId>
+      <version>5.0.3</version>
+    </dependency>
   </dependencies>
+
 
   <build>
     <sourceDirectory>src/main/kotlin</sourceDirectory>
@@ -95,6 +102,15 @@
             <kotest.framework.classpath.scanning.autoscan.disable>true
             </kotest.framework.classpath.scanning.autoscan.disable>
           </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.5.0</version>
+        <configuration>
+<!--          <mainClass>hwr.oop.KotlinExample</mainClass>-->
+          <mainClass>hwr.oop.KotlinExampleKt</mainClass>
         </configuration>
       </plugin>
     </plugins>
