refactor: update main class path in pom.xml to hwr.oop.projects.peakpoker.MainKt

--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
           </descriptorRefs>
           <archive>
             <manifest>
-              <mainClass>hwr.oop.MainKt</mainClass>
+              <mainClass>hwr.oop.projects.peakpoker.MainKt</mainClass>
             </manifest>
           </archive>
         </configuration>
