feat: add kotlin-test dependency for improved testing

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
             <version>${kotest-extensions-pitest.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
