--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,10 @@
         <artifactId>pitest-maven</artifactId>
         <version>${pitest.version}</version>
         <configuration>
+          <jvmArgs>
+            <param>-Xmx2048m</param>
+            <param>-XX:+ExitOnOutOfMemoryError</param>
+          </jvmArgs>
           <avoidCallsTo>
             <avoidCallsTo>kotlin.jvm.internal</avoidCallsTo>
           </avoidCallsTo>
